objects/Account.object
<CustomObject><fields>
        <fullName>Chance_of_on_going_work__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100%.

0% is no chance, 100% is definitely</inlineHelpText>
        <label>Chance of on going work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Check_All_Fields__c</fullName>
        <formula>IF( ISBLANK(Estimated_Client_Value_pa__c), 0, IF(ISBLANK(Chance_of_on_going_work__c),0,IF(ISBLANK(Debt_Risk__c),0,IF(ISBLANK(Off_On_Shore__c),0,1))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check All Fields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Client_Rating__c</fullName>
        <formula>IF(Check_All_Fields__c = 1, IF(Rating_Score__c&lt;20, "D", IF(Rating_Score__c&lt;30, "C", IF(Rating_Score__c&lt;40, "B", IF(Rating_Score__c&lt;=50, "A", "") ) ) ) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Rating</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Credit_Terms__c</fullName>
        <globalPicklist>Credit_Terms_Values</globalPicklist>
        <label>Credit Terms</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Debt_Risk__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100%, where 0% is no risk and 100% is very risky.</inlineHelpText>
        <label>Debt Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Estimated_Client_Value_pa__c</fullName>
        <label>Estimated Client Value p.a.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Off_On_Shore__c</fullName>
        <inlineHelpText>Enter a whole number from 0% - 100% Where 0% is all work off shore and 100% is all work on shore.</inlineHelpText>
        <label>% Of Work On Shore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Rating_Score__c</fullName>
        <formula>Rating_for_Estimated_Client_Value_pa__c + Rating_for_Chance_of_on_going_work__c + Rating_for_debt_risk__c + Rating_for_off_On_Shore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_Chance_of_on_going_work__c</fullName>
        <formula>IF( Chance_of_on_going_work__c == 1,10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating for Chance of on going work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_Estimated_Client_Value_pa__c</fullName>
        <formula>IF( Estimated_Client_Value_pa__c &lt; 50000,0, IF(Estimated_Client_Value_pa__c &lt;= 249000, 5, IF(Estimated_Client_Value_pa__c &lt;= 499999, 10, IF(Estimated_Client_Value_pa__c &lt;= 999999, 15, IF(Estimated_Client_Value_pa__c &gt;=1000000, 20, 0) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating for Estimated Client Value pa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_debt_risk__c</fullName>
        <formula>IF( Debt_Risk__c =1,0, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating for debt risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Rating_for_off_On_Shore__c</fullName>
        <formula>IF( Off_On_Shore__c = 1, 10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating for off/On Shore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Transport_Option__c</fullName>
        <globalPicklist>Transport_Options</globalPicklist>
        <label>Transport</label>
        <type>Picklist</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews></CustomObject>